--- a/scratch.html
+++ b/scratch.html
@@ -9,11 +9,7 @@
   <body>
     <h1>Alaska: A Locals Guide</h1>
     <div class="links">
-      <a
-        href="file:///C:/Users/clayt/OneDrive/Desktop/website%202%20lol/startbootstrap-resume-gh-pages/BootstrapStuffs.html#experience"
-      >
-        My Resume</a
-      >
+       <a href="file:///C:/Users/clayt/OneDrive/Desktop/website%202%20lol/startbootstrap-resume-gh-pages/BootstrapStuffs.html#experience"> My Resume</a> 
     </div>
     <div class="imagecontainer">
       <a
@@ -53,7 +49,7 @@
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen
+        allowfullscreen 
       ></iframe>
     </div>
     <a href="index.html"></a>
