--- a/scratch.html
+++ b/scratch.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Alaska: A Locals Guide</h1>
     <div class="links">
-       <a href="file:///C:/Users/clayt/OneDrive/Desktop/website%202%20lol/startbootstrap-resume-gh-pages/BootstrapStuffs.html#experience"> My Resume</a> 
+       <a href="https://claytonscool.github.io/clayak/BootstrapStuffs.html#education"> My Resume</a> 
     </div>
     <div class="imagecontainer">
       <a
